objects/nRetail__Asset__c.object
<CustomObject>
    <description>The asset object stores information about an applicant&apos;s assets.</description>
    <fields>
        <fullName>nRetail__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and represents the account to which this asset belongs.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Asset_Type__c</fullName>
        <description>This field is required and denotes the type of asset.</description>
        <label>Asset Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automobile</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Homestead</fullName>
                </value>
                <value>
                    <fullName>Life Insurance Cash Value</fullName>
                </value>
                <value>
                    <fullName>Mortgages and Contracts Held By You</fullName>
                </value>
                <value>
                    <fullName>Other Assets</fullName>
                </value>
                <value>
                    <fullName>Other Real Estate</fullName>
                </value>
                <value>
                    <fullName>Personal Property</fullName>
                </value>
                <value>
                    <fullName>Profit Sharing &amp; Pensions</fullName>
                </value>
                <value>
                    <fullName>Retirement Accounts - Include IRA Acct.</fullName>
                </value>
                <value>
                    <fullName>Securities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRetail__Asset__c</fullName>
        <description>This field is required and is a short description of the asset.</description>
        <inlineHelpText>Enter a short description of the asset.</inlineHelpText>
        <label>Asset</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nRetail__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and represents the contact who has this debt.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Estimated_Value__c</fullName>
        <description>This field is required and represents the value of the asset. This is a currency field.</description>
        <label>Estimated Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and represents the loan this asset is related to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>